force-app/main/default/objects/myCart__c/myCart__c.object-meta.xml
<CustomObject>
    <label>myCart</label>
    <nameField>
        <displayFormat>item -{0000}</displayFormat>
        <label>Cart items</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>myCarts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>