force-app/main/default/objects/myCart__c/fields/AtlasItemId__c.field-meta.xml
<CustomField>
    <fullName>AtlasItemId__c</fullName>
    <label>AtlasItemId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>