force-app/main/default/objects/myCart__c/fields/itemCount__c.field-meta.xml
<CustomField>
    <fullName>itemCount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>itemCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>