force-app/main/default/objects/myCart__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>backpack</fullName>
            </value>
            <value>
                <fullName>bundle</fullName>
            </value>
            <value>
                <fullName>emote</fullName>
            </value>
            <value>
                <fullName>glider</fullName>
            </value>
            <value>
                <fullName>music</fullName>
            </value>
            <value>
                <fullName>outfit</fullName>
            </value>
            <value>
                <fullName>pickaxe</fullName>
            </value>
            <value>
                <fullName>wrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>